# mcl-heat-transfer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
inc/: ExplicitFDM.hpp  HeatSolver.hpp  ImplicitFDM.hpp
src/: CMakeLists.txt  ExplicitFDM.cpp  ImplicitFDM.cpp
tests/: CMakeLists.txt  ExplicitFDM_Test.cpp  sample_test.cpp
